--- a/capacitor/package.json
+++ b/capacitor/package.json
@@ -35,7 +35,8 @@
 	"dependencies": {
 		"@capacitor/android": "^7.2.0",
 		"@capacitor/cli": "^7.2.0",
-		"@capacitor/core": "^7.2.0"
+		"@capacitor/core": "^7.2.0",
+		"@supabase/supabase-js": "^2.49.8"
 	},
 	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
