--- a/capacitor/package.json
+++ b/capacitor/package.json
@@ -33,6 +33,7 @@
 		]
 	},
 	"dependencies": {
+		"@capacitor-mlkit/barcode-scanning": "^7.2.1",
 		"@capacitor/android": "^7.2.0",
 		"@capacitor/cli": "^7.2.0",
 		"@capacitor/core": "^7.2.0",
