--- a/capacitor/package.json
+++ b/capacitor/package.json
@@ -37,6 +37,7 @@
 	"dependencies": {
 		"@capacitor-mlkit/barcode-scanning": "^7.2.1",
 		"@capacitor/android": "^7.2.0",
+		"@capacitor/app": "^7.0.1",
 		"@capacitor/cli": "^7.2.0",
 		"@capacitor/core": "^7.2.0",
 		"@capacitor/keyboard": "^7.0.1",
