--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@types/node": "^22.15.24",
+    "@types/qrcode": "^1.5.6",
     "eslint": "^9.18.0",
     "eslint-plugin-storybook": "9.1.5",
     "eslint-plugin-svelte": "^3.0.0",
@@ -51,6 +52,7 @@
     "@capacitor/keyboard": "^7.0.1",
     "@capacitor/status-bar": "^7.0.1",
     "@supabase/supabase-js": "^2.49.8",
+    "qrcode": "^1.5.4",
     "sqids": "^0.3.0"
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
